--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://hbkarim2016.github.io/cryptofield/",
+  "homepage": "http://hbkarim2016.github.io/cryptofield",
   "name": "cryptofield",
   "version": "0.1.0",
   "private": true,
